<resources>
    <string name="app_name">PILocker</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connecting">Connecting…</string>
    <string name="installing">Installing…</string>
    <string name="install_guide">No device found. Connect the lock to a power supply before pressing install</string>
    <string name="progress_loading_text">Connecting..</string>
    <string name="installation_name_edittext_hint">Office door</string>
    <string name="exchangingrsakey">Pairing..</string>
    <string name="welcome_header">Welcome to PILocker</string>
    <string name="welcome_header_text">Choose installation mode</string>
    <string name="welcome_button_first">Install new lock</string>
    <string name="welcome_button_nth">Already installed?</string>
    <string name="installation_password_create_new_password">Set a password for Service mode</string>
    <string name="installation_password_write_in_password">Write in password for Service mode</string>
    <string name="installation_password_firsttime_edittext_hint">Set a new password..</string>
    <string name="installation_password_nthtime_edittext_hint">Write in password..</string>
    <string name="installation_password_header_txt">Service Mode Password</string>
    <string name="installation_service_header">Activate Service Mode</string>
    <string name="installation_service_instructions_textView">Click the Service Button</string>
    <string name="installation_ap_header_textview">Access Point Configuration</string>
    <string name="installation_ap_instructions_textView">Connect to the piDOOR WiFI</string>
    <string name="installation_ap_instructions_password_textView">Password: gruppe_6_rox</string>
    <string name="menu_unlock_logging_settings">Logging settings</string>
    <string name="menu_unlock_delete">Door lock settings</string>
    <string name="menu_unlock_shutdown">Shutdown RPI</string>
    <string name="rpisettings_uptime_placeholder">Calculating..</string>
    <string name="choose_login_selection">What kind of authentication do you want when you unlock the door?</string>
    <string name="change_login_selection">What do you want to change to?</string>
    <string name="repeat_pin_code">Repeat pin code</string>
    <string name="insert_pin_code">Insert pin code</string>
    <string name="next">NEXT</string>
    <string name="save">Save</string>
    <string name="settings_no_email_found">No user signed in</string>
    <string name="settings_calculating_uptime">Calculating..</string>
    <string name="settings">Settings</string>
    <string name="global_password_hint">Password</string>
    <string name="global_password_hint_repeat">Repeat password</string>
    <string name="fragment_settings_warning_dialog_header">Restore factory settings?</string>
    <string name="fragment_settings_warning_dialog_text">This will delete all stored data in both the application and lock unit</string>


</resources>
