<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkBackgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/installation_name_constraintLayout"
    tools:context=".InstallNamingFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="92dp"
        android:text="@string/welcome_header"
        android:textColor="@color/primaryTextColor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/welcome_header_text"
        android:textColor="@color/primaryTextColor"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/installation_welcome_btn_first_time_installation"
        style="@style/NewInstallButton"
        android:layout_width="340sp"
        android:layout_height="80sp"
        android:text="@string/welcome_button_first"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/installation_welcome_btn_nth_time_installation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.793" />

    <Button
        android:id="@+id/installation_welcome_btn_nth_time_installation"
        style="@style/AlreadyInstallButton"
        android:layout_width="250sp"
        android:layout_height="60sp"
        android:layout_marginBottom="144dp"
        android:text="@string/welcome_button_nth"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>