<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/installation_logging_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkBackgroundColor"
    tools:context=".InstallNamingFragment">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:text="Application authentication"
        android:textColor="@color/primaryTextColor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:text="@string/choose_login_selection"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <RadioGroup
        android:id="@+id/radio_logging_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:checkedButton="@id/radio_logging_no"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radio_authSelection_biometric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Biometrics" />

        <RadioButton
            android:id="@+id/radio_authSelection_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pin code" />

        <RadioButton
            android:id="@+id/radio_authSelection_nothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nothing" />
    </RadioGroup>


    <EditText
        android:id="@+id/installation_authSelection_editText_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/insert_pin_code"
        android:inputType="number"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_logging_radioGroup" />

    <EditText
        android:id="@+id/installation_authSelection_editText_repeatPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:ems="10"
        android:hint="@string/repeat_pin_code"
        android:inputType="number"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/installation_authSelection_editText_pin" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/installation_logging_nextBtn"
            style="@style/InstallationButton"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:elevation="10sp"
            android:text="@string/next" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>