<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkBackgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/installation_name_constraintLayout"
    tools:context=".InstallPasswordFragment">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/installation_password_header_txt"
        android:textColor="@color/primaryTextColor"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <EditText
        android:id="@+id/installation_password_editText"
        android:layout_width="241dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/ic_vpn_key_black_24dp"
        android:ems="10"
        android:hint="@string/global_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.421" />

    <EditText
        android:id="@+id/installation_password_editText_repeat"
        android:layout_width="241dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/ic_vpn_key_black_24dp"
        android:ems="10"
        android:hint="@string/global_password_hint_repeat"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/installation_password_editText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/installation_password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/installation_password_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.724" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/installation_password_btn_next"
            style="@style/InstallationButton"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:elevation="10sp"
            android:text="NEXT" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ImageView
        android:id="@+id/installation_password_viewPassword_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_eye"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toEndOf="@+id/installation_password_editText"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>