<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:padding="10dp"
        android:scaleType="center"
        android:text="Authentication method"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/fragment_settings_dialog_radioGroup"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checkedButton="@id/radio_logging_no"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <RadioButton
            android:id="@+id/fragment_settings_dialog_radio_biometric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Biometric" />

        <RadioButton
            android:id="@+id/fragment_settings_dialog_radio_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PIN" />

        <RadioButton
            android:id="@+id/fragment_settings_dialog_radio_nothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nothing" />
    </RadioGroup>

    <EditText
        android:id="@+id/fragment_settings_dialog_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:ems="10"
        android:hint="@string/insert_pin_code"
        android:inputType="numberPassword"
        android:textColor="@color/primaryTextColor"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_dialog_radioGroup" />

    <EditText
        android:id="@+id/fragment_settings_dialog_pin_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:ems="10"
        android:hint="@string/repeat_pin_code"
        android:inputType="numberPassword"
        android:textColor="@color/primaryTextColor"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_dialog_pin" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_settings_dialog_pin_repeat">

        <Button
            android:id="@+id/fragment_settings_dialog_cancel"
            style="@style/InstallationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="CANCEL"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="288dp" />

        <Button
            android:id="@+id/fragment_settings_dialog_save"
            style="@style/InstallationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SAVE"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="288dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>